[common] migrate to legacy develop version